--- a/default.conf
+++ b/default.conf
@@ -8,15 +8,16 @@ server {
     server_name nekohouse.ca;
 
     # These shouldn't need to be changed
-    listen [::]:80 default_server ipv6only=off;
+    listen 80;
     location / {
         proxy_pass http://localhost:8080;
     #return 301 https://$host$request_uri;
+    }
 }
 
 server { 
     server_name brew.nekohouse.ca;
-    listen [::]:80 default_server ipv6only=off;
+    listen 80;
     location / {
         proxy_pass http://localhost:8081;
     }
@@ -59,4 +60,5 @@ server {
 #        proxy_set_header Upgrade $http_upgrade;
 #        proxy_set_header Connection $connection_upgrade;
   #  }
-}
+
+
