--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,8 @@
-map $http_upgrade $connection_upgrade {
-    default upgrade;
-    ''      close;
-}
+
+#map $http_upgrade $connection_upgrade {
+#    default upgrade;
+#    ''      close;
+#}
 
 server {
     # Update this line to be your domain
