--- a/default.conf
+++ b/default.conf
@@ -17,7 +17,7 @@ server {
 }
 
 server { 
-    server_name brew.nekohouse.ca;
+    #server_name brew.nekohouse.ca;
     listen 80;
     location / {
         proxy_pass http://localhost:8081;
