--- a/default.conf
+++ b/default.conf
@@ -20,7 +20,7 @@ server {
     #server_name brew.nekohouse.ca;
     listen 80;
     location / {
-        proxy_pass http://localhost:8081;
+        proxy_pass http://127.0.0.1:8081;
     }
 }
 
