--- a/default.conf
+++ b/default.conf
@@ -4,23 +4,23 @@
 #    ''      close;
 #}
 
-server {
+#server {
     # Update this line to be your domain
-    server_name nekohouse.ca;
+#    server_name nekohouse.ca;
 
     # These shouldn't need to be changed
-    listen 80;
-    location / {
-        proxy_pass http://localhost:8080;
-    #return 301 https://$host$request_uri;
-    }
-}
+#    listen 80;
+#    location / {
+#        proxy_pass http://localhost:8080;
+#    #return 301 https://$host$request_uri;
+#    }
+#}
 
 server { 
-    #server_name brew.nekohouse.ca;
+    server_name brew.nekohouse.ca;
     listen 80;
     location / {
-        proxy_pass http://localhost:8081;
+        proxy_pass http://brewweb;
     }
 }
 
