adding https to brew.nekohouse.ca

--- a/default.conf
+++ b/default.conf
@@ -5,3 +5,21 @@ server {
         proxy_pass http://brewweb;
     }
 }
+
+server {
+    server_name brew.nekohouse.ca;
+    listen 443 ssl;
+    
+    # TLS certificates
+    ssl_certificate /etc/nginx/ssl/fullchain.pem
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem
+
+    # dhparams for authentication
+    ssl_dhparams /etc/nginx/ssl/dhparams.pem
+
+
+ 
+    location / {
+        proxy_pass https://brewweb;
+    }
+}
