this is the most up to date version

--- a/default.conf
+++ b/default.conf
@@ -1,25 +1,36 @@
+ssl_certificate /etc/nginx/ssl/fullchain.pem;
+ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+ssl_ciphers HIGH:!aNULL:!MD5;
+ssl_session_cache shared:SSL:10m;
+ssl_session_timeout 10m;
+
+server {
+    listen 80 default_server;
+    server_name _;
+    return 301 https://$host$request_uri;
+}
+
 server {
     server_name brew.nekohouse.ca;
-    listen 80;
+    listen 443 ssl;
     location / {
         proxy_pass http://brewweb;
     }
 }
 
 server {
-    server_name brew.nekohouse.ca;
+    server_name home.nekohouse.ca;
     listen 443 ssl;
-    
-    # TLS certificates
-    ssl_certificate /etc/nginx/ssl/fullchain.pem
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem
-
-    # dhparams for authentication
-    ssl_dhparams /etc/nginx/ssl/dhparams.pem
-
-
- 
     location / {
-        proxy_pass https://brewweb;
+        proxy_pass http://hass:8123;
     }
 }
+
+#server { 
+#    server_name nekohouse.ca default_server;
+#    listen 80;
+#    location / {
+#        proxy_pass http://nekoneko;
+#    }
+#}
