--- a/default.conf
+++ b/default.conf
@@ -1,9 +1,16 @@
+error_log /var/log/nginx/error.log debug;
+
 ssl_certificate /etc/nginx/ssl/fullchain.pem;
 ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 ssl_ciphers HIGH:!aNULL:!MD5;
 ssl_session_cache shared:SSL:10m;
 ssl_session_timeout 10m;
+
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
 
 server {
     listen 80 default_server;
@@ -15,7 +22,7 @@ server {
     server_name brew.nekohouse.ca;
     listen 443 ssl;
     location / {
-        proxy_pass http://brewweb;
+        proxy_pass http://localhost:81;
     }
 }
 
@@ -23,7 +30,13 @@ server {
     server_name home.nekohouse.ca;
     listen 443 ssl;
     location / {
-        proxy_pass http://hass:8123;
+        proxy_pass http://localhost:8123;
+        proxy_redirect http:// https://;
+        proxy_http_version 1.1;
+	proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
     }
 }
 
